✨ fixed ember-basic-dropdown z-index

--- a/hcu-urban-model-builder-client/app/styles/app.scss
+++ b/hcu-urban-model-builder-client/app/styles/app.scss
@@ -55,7 +55,7 @@
 }
 
 .ember-basic-dropdown-content {
-  z-index: 1054;
+  z-index: 1055;
 }
 
 @import "./react-canvas";
